@@ -9,18 +9,19 @@ import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 public class GitLabService {
 
+    /** Items per page for all Pager calls. GitLab max is 100. */
+    private static final int PAGE_SIZE = 100;
+
     private final GitLabApi api;
-    private final String cacheKey;  // "host|token" for UserResolver
+    private final String cacheKey;
     private final String segment;
     private final String since;
     private final String until;
-
-    /** (done, total) — both numbers grow over time */
     private final BiConsumer<Integer, Integer> progressCallback;
-    /** Text phase label shown next to the numbers */
     private final Consumer<String> phaseCallback;
     private final UserResolver userResolver = new UserResolver();
 
@@ -40,22 +41,34 @@ public class GitLabService {
         this.phaseCallback = phaseCallback;
     }
 
+    // ------------------------------------------------------------------ //
+    //  Public entry point
+    // ------------------------------------------------------------------ //
+
     public CompletableFuture<List<CommitDetail>> fetchProjects(List<Integer> projectIds) {
         List<CompletableFuture<List<CommitDetail>>> futures = projectIds.stream()
                 .map(this::fetchProject)
-                .toList();
+                .collect(Collectors.toList());
 
         return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
                 .thenApply(v -> {
                     Map<String, CommitDetail> unique = new LinkedHashMap<>();
-                    futures.forEach(f -> f.join().forEach(c -> unique.put(c.id(), c)));
+                    for (CompletableFuture<List<CommitDetail>> f : futures) {
+                        for (CommitDetail c : f.join()) {
+                            unique.put(c.id(), c);
+                        }
+                    }
                     List<CommitDetail> result = new ArrayList<>(unique.values());
-                    result.sort(Comparator.comparing(CommitDetail::committedDate));
+                    Collections.sort(result, Comparator.comparing(CommitDetail::committedDate));
                     return result;
                 });
     }
 
-    private CompletableFuture<List<CommitDetail>> fetchProject(int projectId) {
+    // ------------------------------------------------------------------ //
+    //  Per-project fetch
+    // ------------------------------------------------------------------ //
+
+    private CompletableFuture<List<CommitDetail>> fetchProject(final int projectId) {
         return CompletableFuture.supplyAsync(() -> {
             try {
                 Project project = api.getProjectApi().getProject(projectId);
@@ -65,46 +78,80 @@ public class GitLabService {
                 Date sinceDate = Date.from(Instant.parse(since));
                 Date untilDate = Date.from(Instant.parse(until));
 
-                // ── Phase 1: direct commits ──────────────────────────────────────
+                // ---- Phase 1: direct commits in date range, ALL branches (ALL pages) ----
+                //
+                // Signature (gitlab4j 5.x):
+                //   getCommits(Object projectIdOrPath,
+                //              String  ref,          <- null = default branch only (unless all=true)
+                //              Date    since,
+                //              Date    until,
+                //              String  path,         <- file path filter, null = no filter
+                //              Boolean all,          <- TRUE = traverse all branches (like ?all=true in JS)
+                //              Boolean withStats,    <- FALSE = stats NOT in list response anyway
+                //              Boolean firstParent,
+                //              int     itemsPerPage) -> Pager<Commit>
                 phaseCallback.accept("[" + projectName + "] прямые коммиты...");
-                List<Commit> directCommits = commitsApi.getCommits(
-                        projectId, null, sinceDate, untilDate, null,
-                        Boolean.TRUE, Boolean.TRUE, Boolean.FALSE
+                List<Commit> directCommits = allPages(
+                        commitsApi.getCommits(
+                                (Object) projectId,
+                                null,         // ref   – doesn't matter when all=true
+                                sinceDate,
+                                untilDate,
+                                null,         // path
+                                Boolean.TRUE, // all   – all branches (equivalent to ?all=true)
+                                Boolean.FALSE,// withStats
+                                Boolean.FALSE,// firstParent
+                                PAGE_SIZE
+                        )
                 );
                 total.addAndGet(directCommits.size());
                 fireProgress();
-                for (Commit c : directCommits) {
-                    CommitDetail cd = toDetail(c, segment, projectName);
-                    if (cd != null) unique.put(cd.id(), cd);
-                    done.incrementAndGet();
-                    fireProgress();
-                }
 
-                // ── Phase 2: MR commits (parallel per MR) ───────────────────────
+                // Fetch full commit details (includes stats) in parallel
+                List<CompletableFuture<Void>> directDetailFutures = directCommits.stream()
+                        .map(c -> CompletableFuture.runAsync(() -> {
+                            try {
+                                Commit detail = commitsApi.getCommit((Object) projectId, c.getId());
+                                CommitDetail cd = toDetail(detail, segment, projectName);
+                                if (cd != null) unique.put(cd.id(), cd);
+                            } catch (Exception e) {
+                                System.err.println("Error fetching commit " + c.getId() + ": " + e.getMessage());
+                            } finally {
+                                done.incrementAndGet();
+                                fireProgress();
+                            }
+                        }))
+                        .collect(Collectors.toList());
+                CompletableFuture.allOf(directDetailFutures.toArray(new CompletableFuture[0])).join();
+
+                // ---- Phase 2: MR commits (ALL pages for MRs and for each MR's commits) ----
                 phaseCallback.accept("[" + projectName + "] MR-списки...");
-                List<MergeRequest> mrs = api.getMergeRequestApi()
-                        .getMergeRequests(projectId, Constants.MergeRequestState.ALL, 1, 100);
+                List<MergeRequest> mrs = allPages(
+                        api.getMergeRequestApi().getMergeRequests(
+                                (Object) projectId,
+                                Constants.MergeRequestState.ALL,
+                                PAGE_SIZE
+                        )
+                );
 
-                // Each MR's commits are fetched in parallel; as soon as we know
-                // the SHAs from one MR we add them to total and launch detail requests.
                 List<CompletableFuture<Void>> allMrFutures = new ArrayList<>();
-
                 for (MergeRequest mr : mrs) {
+                    final long mrIid = mr.getIid();
                     allMrFutures.add(CompletableFuture.runAsync(() -> {
                         try {
-                            List<Commit> mrCommits = api.getMergeRequestApi()
-                                    .getCommits(projectId, mr.getIid(), 1, 100);
-
-                            // Add this MR's commits to total immediately
+                            List<Commit> mrCommits = allPages(
+                                    api.getMergeRequestApi().getCommits(
+                                            (Object) projectId, mrIid, PAGE_SIZE
+                                    )
+                            );
                             total.addAndGet(mrCommits.size());
                             fireProgress();
 
-                            // Launch parallel detail requests for each SHA
                             List<CompletableFuture<Void>> detailFutures = mrCommits.stream()
                                     .map(Commit::getId)
                                     .map(sha -> CompletableFuture.runAsync(() -> {
                                         try {
-                                            Commit detail = commitsApi.getCommit(projectId, sha);
+                                            Commit detail = commitsApi.getCommit((Object) projectId, sha);
                                             CommitDetail cd = toDetail(detail, segment, projectName);
                                             if (cd != null) unique.put(cd.id(), cd);
                                         } catch (Exception e) {
@@ -114,11 +161,10 @@ public class GitLabService {
                                             fireProgress();
                                         }
                                     }))
-                                    .toList();
-
+                                    .collect(Collectors.toList());
                             CompletableFuture.allOf(detailFutures.toArray(new CompletableFuture[0])).join();
                         } catch (Exception e) {
-                            System.err.println("Error fetching MR " + mr.getIid() + ": " + e.getMessage());
+                            System.err.println("Error fetching MR " + mrIid + ": " + e.getMessage());
                         }
                     }));
                 }
@@ -135,6 +181,22 @@ public class GitLabService {
         });
     }
 
+    // ------------------------------------------------------------------ //
+    //  Pager helper – collects all pages into a flat list (blocking)
+    // ------------------------------------------------------------------ //
+
+    private static <T> List<T> allPages(Pager<T> pager) throws GitLabApiException {
+        List<T> result = new ArrayList<>();
+        while (pager.hasNext()) {
+            result.addAll(pager.next());
+        }
+        return result;
+    }
+
+    // ------------------------------------------------------------------ //
+    //  Helpers
+    // ------------------------------------------------------------------ //
+
     private void fireProgress() {
         progressCallback.accept(done.get(), total.get());
     }
@@ -142,6 +204,7 @@ public class GitLabService {
     private CommitDetail toDetail(Commit c, String segment, String projectName) {
         if (c == null || c.getCommittedDate() == null) return null;
         String dateStr = c.getCommittedDate().toInstant().toString();
+        // Secondary date guard: API filters by authored_date; we filter result by committed_date
         if (!isTimeBound(dateStr)) return null;
 
         String msg = c.getMessage() == null ? "" : c.getMessage()
@@ -156,22 +219,12 @@ public class GitLabService {
             deletions = c.getStats().getDeletions() != null ? c.getStats().getDeletions() : 0;
         }
 
-        // Resolve email -> GitLab username (cached)
-        String username = userResolver.resolve(api, cacheKey, c.getAuthorName());
+        String username = userResolver.resolve(api, cacheKey, c.getAuthorEmail());
 
         return new CommitDetail(
                 c.getId(), dateStr, msg,
-                author(username),
+                username,
                 additions, deletions, segment, projectName);
-    }
-
-    private String author(String email) {
-        if (email.isBlank())
-            return email;
-        int pos = email.indexOf('@');
-        if (pos > -1)
-            email = email.substring(0, pos);
-        return email;
     }
 
     private boolean isTimeBound(String dateStr) {
